# Unihack-Future-Farmers

./: AI_CHAT_SETUP.md  FINAL_SUMMARY.md  FRONTEND_TEST_GUIDE.md  PROGRESS.md  README.md  SERA_SETUP.md  TESTING_GUIDE.md  index.html
AI/: .gitignore  AI.py  __init__.py  example_usage.py  main.py  processor.py  pyproject.toml  requirements.txt
AI/agents/: agent.py  tools.py
AI/document_generation/: __init__.py  chm_generator.py  report_generator.py
AI/mcp_server/: db.py  mcp_tools.py
AI/models/: model.py
AI/ocr/: __init__.py  certificate_extractor.py  cni_extractor.py  document_processor.py  parcel_extractor.py
AI/training_models/: porcupine_and_faster_whisper_together.py  porcupine_hey_john.py  speech_to_text.py  speech_to_text_faster_whisper.py  text_to_speech_easy.py
AI/training_models/server_jarvis/: command_server.py  jarvis_client.py  jarvis_home_position.json  test_commands.sh
AI/visualisations/: harvest.py  harvest_dashboard.py  visualisations.py
AI/weather_webscrapped/: merge_weather_data.py  merged_weather_timisoara.json
AI/weather_webscrapped/accuweather/: accuwather_webscrapping_last_block_is_ok.ipynb  december_weather_data.json  november_weather_data.json  october_weather_data.json
AI/weather_webscrapped/accuweather/content/: december-weather.html  november-weather.html  october-weather.html
AI/weather_webscrapped/weatherdotcom/: timisoara_weather.json  weatherDotCom_Web_scrapper.ipynb
AI/weather_webscrapped/weatherdotcom/contetnt/: Prognoză meteo lunară pentru Timișoara, Timiș 300000 - weather.com.html
Backend/: .env  .gitignore  (+9 more)
(+135 files in other folders)
