[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agno>=2.2.13",
    "datetime>=5.5",
    "fastapi>=0.121.2",
    "fastapi-mcp>=0.4.0",
    "fastmcp>=2.13.0.2",
    "google-genai>=1.50.1",
    "mcp>=1.21.1",
    "openai>=2.8.0",
    "pymongo[srv]>=4.15.4",
    "uvicorn>=0.38.0",
]
